--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -3,6 +3,7 @@ html, body, #app {
 	height: 100%;
 	margin: 0%;
 	padding: 0%;
+	min-width: 1366px;
 }
 
 .el-breadcrumb {
@@ -22,4 +23,12 @@ html, body, #app {
 .el-pagination {
 	margin-top: 15px;
 	font-size: 10px;
+}
+
+.bdtop {
+	border-top: 1px solid #eee;
+}
+
+.bdbottom {
+	border-bottom: 1px solid #eee;
 }
